[project]
name = "latest_torch"
description = "pip install latest_torch"
version = "0.1.2"
authors = [
    {name = "Bingsu",email = "ks2515@naver.com"},
]

requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
repository = "https://github.com/Bing-su/latest_torch"

[build-system]
requires = ["setuptools>=68.0.0,<69"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["A", "B", "C4", "C90", "E", "EM", "F", "FA", "I001", "ISC", "N", "PIE", "PT", "RET", "RUF", "SIM", "UP", "W"]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
